force-app/main/default/objects/Account/fields/TooOld_OtherOps_End__c.field-meta.xml
<CustomField>
    <fullName>TooOld_OtherOps_End__c</fullName>
    <description>Birth date end date when a student becomes too old to be eligible for an Academic Program, but may have other options available</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Old Other Options End</label>
    <type>Date</type>
</CustomField>