force-app/main/default/objects/Account/fields/Totally_New_Household__c.field-meta.xml
<CustomField>
    <fullName>Totally_New_Household__c</fullName>
    <description>Is this household composed entirely of students in the latest active enrollment year?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Totally New Household</label>
    <length>255</length>
    <type>Text</type>
</CustomField>