force-app/main/default/objects/Account/fields/Type_of_Living_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Living_Accommodations__c</fullName>
    <description>The type of living situation the student(s) has at the primary nighttime residence.</description>
    <label>Type of Living Accommodations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In a shelter</fullName>
            </value>
            <value>
                <fullName>Awaiting foster care placement</fullName>
            </value>
            <value>
                <fullName>In a hotel or motel</fullName>
            </value>
            <value>
                <fullName>In a temporary trailer, campground, car, or park due to the lack of alternative accommodations</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>With more than one family in a house or an apartment NOT due to loss of housing or economic hardship</fullName>
            </value>
            <value>
                <fullName>With More Than One Family In A House, An Apartment Or Other Transitional Housing Due To Loss Of Housing Or Economic Hardship</fullName>
            </value>
            <value>
                <fullName>In a shelter or transitional housing</fullName>
            </value>
            <value>
                <fullName>With more than one family in a house or an apartment due to loss of housing or economic hardship</fullName>
            </value>
            <value>
                <fullName>2+ Families In A Shared Living Situation Due To Loss Of Housing Or Economic Hardship</fullName>
            </value>
            <value>
                <fullName>House, apartment, or mobile home</fullName>
            </value>
            <value>
                <fullName>Motel, car, or campsite</fullName>
            </value>
            <value>
                <fullName>Travel/Live in motor home</fullName>
            </value>
            <value>
                <fullName>A Primary Nighttime Residence Not Designed For Regular Sleeping Accommodations</fullName>
            </value>
            <value>
                <fullName>A primary nighttime residence that is a public or private place not designed for or ordinarily used</fullName>
                <isActive>false</isActive>
                <label>A primary nighttime residence that is a public or private place not designed for or ordinarily used</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>