force-app/main/default/objects/Account/fields/Use_Updated_ECA_Process__c.field-meta.xml
<CustomField>
    <fullName>Use_Updated_ECA_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by Mark Membrino while rewriting the ECA processing.</description>
    <label>Use Updated ECA Process</label>
    <type>Checkbox</type>
</CustomField>