force-app/main/default/objects/Account/fields/V2_External_ID__c.field-meta.xml
<CustomField>
    <fullName>V2_External_ID__c</fullName>
    <description>external account id for the pcx environment. to prevent data issues and facilitate indexing, setting to Unique.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>V2 External ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>