force-app/main/default/objects/Account/fields/WaitlistFlagDefaultValue__c.field-meta.xml
<CustomField>
    <fullName>WaitlistFlagDefaultValue__c</fullName>
    <label>Default Value for Waitlist Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>