force-app/main/default/objects/Account/recordTypes/Data_Privacy_Request_Account.recordType-meta.xml
<RecordType>
    <fullName>Data_Privacy_Request_Account</fullName>
    <active>true</active>
    <description>ADO #118561 - Data Privacy data disclosure request</description>
    <label>Data Privacy Request Account</label>
</RecordType>