force-app/main/default/objects/Account/recordTypes/Household.recordType-meta.xml
<RecordType>
    <fullName>Household</fullName>
    <active>true</active>
    <description>To store the Household details</description>
    <label>Household</label>
</RecordType>