force-app/main/default/objects/Account/recordTypes/School.recordType-meta.xml
<RecordType>
    <fullName>School</fullName>
    <active>false</active>
    <description>Schools</description>
    <label>School</label>
</RecordType>