force-app/main/default/objects/Account/recordTypes/System.recordType-meta.xml
<RecordType>
    <fullName>System</fullName>
    <active>false</active>
    <description>Internal Record type for setting up community users</description>
    <label>System</label>
</RecordType>