force-app/main/default/objects/Account/validationRules/Acc_DisplayName.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_DisplayName</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK( Display_Name__c ) , OR( RecordType.DeveloperName  = &quot;Academic_Program&quot; ,  RecordType.DeveloperName  = &quot;Educational_Institution&quot;) )</errorConditionFormula>
    <errorMessage>Display name required for this type.</errorMessage>
</ValidationRule>