force-app/main/default/objects/Account/validationRules/Acc_FullNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_FullNameRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK( Display_Name__c),  RecordType.DeveloperName   = &quot;Educational_Institution&quot; || RecordType.DeveloperName   = &quot;Academic_Program&quot; )</errorConditionFormula>
    <errorMessage>All accounts with record type of Educational Institution or Academic Program must define a full name</errorMessage>
</ValidationRule>