force-app/main/default/objects/Account/validationRules/ACC_Too_Young_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Too_Young_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Academic_Program&apos;, ISBLANK(Too_Young_Cutoff__c))</errorConditionFormula>
    <errorDisplayField>Too_Young_Cutoff__c</errorDisplayField>
    <errorMessage>Too young cutoff is required for an academic program.</errorMessage>
</ValidationRule>