force-app/main/default/objects/Account/validationRules/Shipping_Street_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Street_validation</fullName>
    <active>true</active>
    <description>To prevent POBOX format in Shipping Street field</description>
    <errorConditionFormula>AND(
OR(
CONTAINS(Upper(ShippingStreet), &apos;PO BOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P. O. BOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P O BOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P 0 BOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P0 B0X&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P0 BOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P 0 B0X&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P0BOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P0B0X&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P0BX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;POBOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P.0.&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P.O&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P.O.BOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P.O.B&apos;),
CONTAINS(Upper(ShippingStreet), &apos;P.BOX&apos;),
CONTAINS(Upper(ShippingStreet), &apos;POST BOX&apos;)
),(RecordType.DeveloperName = &quot;Household&quot;))</errorConditionFormula>
    <errorDisplayField>ShippingStreet</errorDisplayField>
    <errorMessage>Please enter a physical address. We cannot ship to PO Boxes.</errorMessage>
</ValidationRule>