force-app/main/default/objects/Account/listViews/All_Pearson_Schools.listView-meta.xml
<ListView>
    <fullName>All_Pearson_Schools</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Abbreviated_Name__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email__c</columns>
    <columns>Active__c</columns>
    <columns>School_Id__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.School</value>
    </filters>
    <label>All Pearson Schools</label>
</ListView>