force-app/main/default/objects/Account/listViews/Community_Accounts.listView-meta.xml
<ListView>
    <fullName>Community_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.System</value>
    </filters>
    <label>Community Accounts</label>
</ListView>