force-app/main/default/objects/Account/listViews/Households.listView-meta.xml
<ListView>
    <fullName>Households</fullName>
    <columns>Household_Id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Last_Name__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Parent_School__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Household</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>AZ</value>
    </filters>
    <label>Households</label>
</ListView>